@@ -17,5 +17,5 @@ Meanwhile, the compiled output files will be generated in the `bin` folder by de
 
 The `JAVA PROJECTS` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-dependency#manage-dependencies).
 
-
-//-3+2 garda error aairacha
+add vmArgs on launch.json file for run time components not found error
+example: "vmArgs": "--module-path \"C:/Java/javafx-sdk-22.0.1/lib\" --add-modules javafx.controls,javafx.fxml"
